--- a/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.ipynb
+++ b/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.ipynb
@@ -684,28 +684,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[TerminalIPythonApp] WARNING | Subcommand `ipython nbconvert` is deprecated and will be removed in future versions.\n",
+      "[TerminalIPythonApp] WARNING | You likely want to use `jupyter nbconvert`... continue in 5 sec. Press Ctrl-C to quit now.\n",
       "[NbConvertApp] Converting notebook 20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.ipynb to slides\n",
-      "[NbConvertApp] Writing 330959 bytes to 20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.slides.html\n",
+      "[NbConvertApp] Writing 327295 bytes to 20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.slides.html\n",
       "[NbConvertApp] Redirecting reveal.js requests to https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.1.0\n",
       "Serving your slides at http://127.0.0.1:8000/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.slides.html\n",
       "Use Control-C to stop this server\n",
       "Created new window in existing browser session.\n",
-      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 0.98ms\n",
-      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.86ms\n",
-      "ERROR:tornado.application:Uncaught exception GET /reveal.js/plugin/notes/notes.html (127.0.0.1)\n",
-      "HTTPServerRequest(protocol='http', host='127.0.0.1:8000', method='GET', uri='/reveal.js/plugin/notes/notes.html', version='HTTP/1.1', remote_ip='127.0.0.1', headers={'Accept-Encoding': 'gzip, deflate, sdch', 'Referer': 'http://127.0.0.1:8000/20160202_Nottingham_GIServices_Lecture3_Beck_InteroperabilitySemanticsAndOpenData.slides.html', 'Accept-Language': 'en-GB,en-US;q=0.8,en;q=0.6', 'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8', 'Host': '127.0.0.1:8000', 'Upgrade-Insecure-Requests': '1', 'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/48.0.2564.97 Safari/537.36', 'Connection': 'keep-alive'})\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/arb/LocalInstalls/anaconda3/lib/python3.5/site-packages/tornado/web.py\", line 1401, in _stack_context_handle_exception\n",
-      "    raise_exc_info((type, value, traceback))\n",
-      "  File \"<string>\", line 3, in raise_exc_info\n",
-      "  File \"/home/arb/LocalInstalls/anaconda3/lib/python3.5/site-packages/tornado/stack_context.py\", line 314, in wrapped\n",
-      "    ret = fn(*args, **kwargs)\n",
-      "  File \"/home/arb/LocalInstalls/anaconda3/lib/python3.5/site-packages/nbconvert/postprocessors/serve.py\", line 31, in finish_get\n",
-      "    response.rethrow()\n",
-      "  File \"/home/arb/LocalInstalls/anaconda3/lib/python3.5/site-packages/tornado/httpclient.py\", line 583, in rethrow\n",
-      "    raise self.error\n",
-      "tornado.httpclient.HTTPError: HTTP 403: Forbidden\n",
-      "ERROR:tornado.access:500 GET /reveal.js/plugin/notes/notes.html (127.0.0.1) 480.47ms\n"
+      "WARNING:tornado.access:404 GET /custom.css (127.0.0.1) 0.69ms\n",
+      "WARNING:tornado.access:404 GET /favicon.ico (127.0.0.1) 0.86ms\n"
      ]
     }
    ],
@@ -1111,13 +1099,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
+      "image/jpeg": "/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAUDBAgHBwUIBwgGBQgGBgUFCAYGCAgFBgYFBgkGBgUG\nBgUHChALBwgOCQUFDBUMDhERExMTBwsWGBYSGBASExIBBQUFCAcIDQgIDBIMDQ0SEhISEhISEhIS\nEhISEhISEhISEhISEhIeEhISEhISEhISEhISEhIeEh4eHh4SHh4eEv/AABEIAWgB4AMBIgACEQED\nEQH/xAAcAAEAAQUBAQAAAAAAAAAAAAAAAwIEBQYHCAH/xABREAABAwEBCQoIDAUCBQUAAAAAAgME\nBRIBExQWF1JUk9QGBxUiMTJCkpSjESMzU2R0orMhJDRDRVViY3J1gtNBc4GDxESEUWFxkeOhpLHB\nw//EABsBAQADAQEBAQAAAAAAAAAAAAACAwQFAQYH/8QALxEBAAEDAgUDAwMEAwAAAAAAAAIDEhME\nBQERFUJSFCIyMzRiBiNRFkNTYSExQf/aAAwDAQACEQMRAD8A8ZAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+g69kArGkUfXS9mGQC\nsaRR9dL2Ysskhki5CDr2QCsaRR9dL2YZAKxpFH10vZhZIyRchB17IBWNIo+ul7MMgFY0ij66Xsws\nkZIuQg69kArGkUfXS9mGQCsaRR9dL2YWSMkXIQdeyAVjSKPrpezDIBWNIo+ul7MLJGSLkIOvZAKx\npFH10vZhkArGkUfXS9mFkjJFyEHXsgFY0ij66XswyAVjSKPrpezCyRki5CDr2QCsaRR9dL2YZAKx\npFH10vZhZIyRchB17IBWNIo+ul7MMgFY0ij66XswskZIuQg69kArGkUfXS9mGQCsaRR9dL2YWSMk\nXIQdeyAVjSKPrpezDIBWNIo+ul7MLJGSLkIOvZAKxpFH10vZhkArGkUfXS9mFkjJFyEHXsgFY0ij\n66XswyAVjSKPrpezCyRki5CDr2QCsaRR9dL2YZAKxpFH10vZhZIyRchB17IBWNIo+ul7MMgFY0ij\n66XswskZIuQg69kArGkUfXS9mGQCsaRR9dL2YWSMkXIQdeyAVjSKPrpezDIBWNIo+ul7MLJGSLkI\nOvZAKxpFH10vZhkArGkUfXS9mFkjJFyEHXsgFY0ij66XswyAVjSKPrpezCyRki5CDr2QCsaRR9dL\n2YZAKxpFH10vZhZIyRchB17IBWNIo+ul7MMgFY0ij66XswskZIuQg69kArGkUfXS9mGQCsaRR9dL\n2YWSMkXIQdeyAVjSKPrpezDIBWNIo+ul7MLJGSLkIOvZAKxpFH10vZhkArGkUfXS9mFkjJFyEHXs\ngFY0ij66XswyAVjSKPrpezCyRki5CDr2QCsaRR9dL2YZAKxpFH10vZhZIyRchB17IBWNIo+ul7MM\ngFY0ij66XswskZIuQg69kArGkUfXS9mGQCsaRR9dL2YWSMkXIQdeyAVjSKPrpezDIBWNIo+ul7ML\nJGSLkIOvZAKxpFH10vZhkArGkUfXS9mFkjJF6YABqYAAAAAAAAAAxFdrzEHiq47mY2eoTqwh82XB\npGPnonfDHz0TviVjN1Kl5t3BpGPnonfDHz0TvhY86lS827g0jHz0Tvhj56J3wsOpUvNu4NIx89E7\n4Y+eid8LDqVLzbuDSMfPRO+GPnonfCw6lS827g0jHz0Tvhj56J3wsOpUvNu4NIx89E74Y+eid8LD\nqVLzbuDSMfPRO+GPnonfCw6lS827g0jHz0Tvhj56J3wse9S0/m3cGkY+eid8MfPRO+Fh1Kl5t3Bp\nGPnonfDHz0TvhYdSpebdwaRj56J3wx89E74WHUqXm3cGkY+eid8MfPRO+Fh1Kl5t3BpGPnonfDHz\n0TvhYdSpebdwaRj56J3wx89E74WHUqXm3cGkY+eid8MfPRO+FjzqVLzbuDSMfPRO+GPnonfCx71K\nl5t3BpGPnonfDHz0TvhY86lS827g0jHz0Tvhj56J3wse9SpebdwaRj56J3wx89E74WHUaXm3cGIo\nVeYncVPEczHDLhqhUhP4AAIpAAPAAAAAAAAAAAAAAAAAONz5Kn3n3Vc5bh2D+CzjJdBxd57AG870\nDKFXa0txqNKUzDj2L+i//PHQ6XBXLVYjwIEldxu+2EQ2ReyUNtnWhe4GD0bilUPqeH2OEMUqh9Tw\n+xwiGeC/o03nIHo3FOofU8PscIYq1D6nh9jhk850abzeD0s3uSndKkQ+xwyfE+d9UQ+zQxngdGm8\nyg9M4pTPqiH2aESYpSvqen9jhDPwOjTeYgeoMU5X1PD7HCK8T3/qiH2OEQzwOjTeWQepnNx7/wBU\nQ+xwijE9/wCqIfY4RPPA6NN5fB6mb3Hu9KkQ+zMn3E9f1RA7MyQznRpvNfCTHB2C4KzhGGYVwn89\ng+jmMPU+J6/qiB2Zk+Ynr+qIfZmTzOn0WbyyD0s5TYyLq0qg01tSPFL+LMlGAxNBpvZmT3Oj0n83\nmwHpPAYmg03szIwCNoNO7MyeZ1fSfzebAek8BiaDTezMjAYmg03szIznSfzebAek8AjaDTuzMlGB\nxtBpvZmRnOk/m83g9G4HE0Gm9mZDkaMn/Q03szIznSfzecig9G2GE/6Om9jZHitDpvY2RnOlfm85\nA9E+K0Om9jZHitDpvY2T3IdK/N52B6Gto0Om9jZIXHkaHTexsjIs6T+bz+VnfcJb0Km9jZI8MRol\nN7GyMjzo35uDA7uuYnRab2Nkj4QTotN7GyMjzo8/NwwoO7cIJ0Wm9jZNJ36kITKpK22mWL9S47q7\nwi8fGCdOopr7bOlC+9pFMkqYeYdTzkOHYDjKOU7O3yIE2vZp/NWACl2gAAAAAAAAAAAAAAAAAAUO\ncizjB2dzkWcYLoOLvPY3zef5K56nH98du3kfl0z1P/8AU4lvN/Tvqcf3p0vcVS5Ut95EN+7CcQ3f\nVruKvRTXbdq+jB2aqom31V2NdRcQq88v8M4giOVC7aS5cTc6Fuz7RpuKlatWOFWrXm8If8PUKsTa\n39Y3O0SDI7LcrtypIteC8OXP4Ebb1UVctWGG+JzF/wDE1W5uPrVzlqKf6yJBXifWPrG5r5AsG0z3\n6gm6wlpDS1KRx/g8T/3KL9U7ikpvbP8Azu3Lniv+5ruKNY09OtfGLNUtWOEmrXm769/8AbJbqfOs\ns/gKr5UrlxHEYu+Wt/D1DWcVqt4fBwgnWvEiNylW+sO9eJ28Bsrj0++LuoaZvfQvnlSFb1UTdZuW\nGF2ueu4nkMMjctVNO714YsVTTk618gM5f6lduN+LYQr4xa/p8lMnS7rqkqU/csKX8NjMNTxZqend\n8+SYs1HTO+fBfNuv9B/Q0nFmo6YnWvleLlR0xOteBfx8G6eH/oPD/wBDTMXKjpida8MXKjpSda+Q\neZJ+DVqsj41N9Yke9LWwXUtlSXH0q8YpDnHWUWC5y6iCwLBPYFgCCwUWC6sFFgCCwUWCawALVaCi\nwXRQ4Ba2CiwTWChwsTWy0EdgunCFwC1cKHCZwocAtloIHC6cKHCxNauFBM4QLQTTfTUd+r5TRfye\nP/lG3Gpb9fl6F+Tx/eyicHP3L7ebQjtRxXpHahNl2XvAAUu0AAAAAAAAAAAAAAAAAAChzkWcYOzu\ncizipdBxd57HQN5v6d9Tj+9Oy7zUlDU6ap1aGU4H01/fHGt5v6d9Tj+9Nt6RRXbtp+k7wuQ0m6i4\nlyI5Zfvl+vzN9LiuvR5TDjSZbUZXg4rzbtzwtnAmyZszQ0trrz1Nzq7lAaUlhKqi25YbkNLcWtN9\ndwrDPtek9yXcamMpfvq5jDib+y9YtpOSNlaEE7FGR1eXAuOyZbuFw0pU5xUXV/C58EX4vJ+4+KH1\nqltIV4UzY9xX9PRdkOWoQToQLHueDpaKQjxlqdHuqXzlXFp8zgpNTaeyy8y6qW0pSHOahafB/rPi\n/O9L7g5ohBXYFhng7Xwkx55nrpGHs+da65xdCCdCCGN56p2LhBnzrXXIuF4ukR9ak8/7sKkpN28N\nqveeawMaHrnqvhBjzzXXuFWHs+da69w8vtz3Us3pK12Sum1V2NdtNq/Q4MaHUXphyqxk/Ap+On/l\nbuFHDEXSI2uPMK3rq7q1KVbUsDGdR/B1Nye1JlTUoWhakSJHviY5TAkrYcQttXGQZOXuklO3efeP\nwE7GG90AGjUndO+0tF+u39vp2zfG7KriFJ5qytNRYKLBNYAerawUWC5sFFgJrWwUE9gjcJi1Wgos\nF0UOAWq0EK0Fy4UOFiaycKCdwjcAtloKHCZwhcLE0DhC4XThABCalv1eWoX5PH97KNtNS36vLUL8\nnj+9lEqfzYtx+3m0JHKdqOKo5Ts6OQsmy7N3qwAUu0AAAAAAAAAAAAAAAAAAChzkWcVO1OcizjBd\nBxd57G+7zf076nH96bZY+E1Peb+nfU4/vTcCmo1bb9JW2TtkbZI2G1MVtlDZM2BW2TtlDZM2VoKy\ntsoJmwgkbJmyjipuWlKvZQxJaXdstrQ4r7tZAazu3gXUuYSnmr8Us1g61YSq5ZUm+JMdi3DV8weK\nJwc2B0rFWH5r2yvFKD5pfXCFjmtsWzpWKUHzS+uV4nw8xfXBY5lbFs6biZDV0XuuUYkw817rgsc1\nNk3Pbp32lxWHFIcZ8lx/mjM7odx8ZqLKdYS844hu+o45h96zc/wlUEW0/F43xp3/AOo4Tpw97os9\nm8XWL4pDd/bvqOOYytVViGi08r8CEeWdMjv7UK+w40ppPGhrShXq/wDE4i/JWu7acUtxX2yC+vDE\n6HE3ZxFrsqS8x94szvO4yfGJOM2ybhJ+whCXXrKOYi2TUXuwEBzzctukXGesvrW5HXz/AJ+9HRIk\nlD7aHWVW218xwLEbhC4XS0EATWrhQXS0EBYIXCFwmcIXAmgcIXCZwocLBbOEbhO4QOBNa2DU9+vy\n9C/J4/vZRuDhp2/V8pov5PH/AMolT+bFuP282ho5Ts6OQ4wjlOzo5CybLs3erABS7QAAAAAAAAAA\nAAAAAAAAKHORZxg7O5yLOMF0HF3nsb7vN/Tvqcf3puDZp+839O+px/em4NlNRq236SZsnbIGydsN\nqZsmbKGytsrEjZMUNkzYQVtkNSqTEW5afXe7fMbLls0DfCQvC0KVzb3xAgbqa9dlOWWVLvKOh50w\nrDykXbSVWFZ6CC2LZWpbAxuqnJu2r/fPxnQNydYTPZ8Nm9uI57ZyO2XUWe6xdtMrWyr7CwO3oQTm\nJ3Jz1TIUZ9znL55lmyCauwVoQCZCAKLBXYJC1qU9EdHhVzugghOpYQp3+yCax1TI0aRS6XcW0hyN\nHuu+GU6tHkvD/wAfCaFPrDrtyzzE5jZgqszf2Hmk9M5/UffY7VDbZwhfJvlW30KO+t6G8mQ9He+K\nrfseJNbVStzCr8w1KuKfR422td5adunMV019N3yTxDgD/mnuodPJBzKkpz+cGSqUynpcsxozzic9\nb3lTNUKNSJiF3xS4LiOeh940xcN3zT3UGASVfMSbP4BzZMbobG5ilSbtlh+/q+7eNniRkMMsNNps\nJQ3ekHGICJUV5l1tiS2plzMOgP7tkop7D7iEYQ9zGELJrG1EDhyaVu5qC1rUl1DCcxCDF1bdJMle\nWfX+BHiAm7ORuHDGKk+i7aQ682r8ZvW5rd40lmzPUu+I6aEeVA3MhcKIE9qUi2wtDyStwsTQOELh\nM4UOAWzhA4XThC4WJoDTN+75VRfyeP72UbmaZv1/KqL+Tx/eyiVP5sW4/bzaEjlO1HFUcp2osmy7\nN3gAKXaAAAAAAAAAAAAAAAAAABQ5yLOMHZ3ORZxgug4u89jfd5v6d9Tj+9NwbNP3m/p31OP703Ns\nhNq236SdsrKGyZsg2q2yZsobK2wgnbJmyFsmbKhM2Q1OmtTG7D6bafdEzZO2QQa5iND85M64xAh+\ndmddk2psmbA1JG4CJ0X5nclbe97G8PGfk9ybg2VthAgRkMNoaaTe20cwujDVrdCxDu2VeOV5tsvK\nFVWpiPCyrjI57bnzRT6iHwWennZeybZO2RtkLlSYTf031lxyNz0W/HNBWyDiLCLauInPOeVqff31\nr6PQLytbpnZTCGVJvaEuSOZ86YC2cTVau72QfQ6HQ4veubZRbIbYtnNdJXbKHFlFsocWXc0uStxZ\ns24960y+m1zHDT7Zltyc9LT9lXNe8UadLUtmxa6ldRZDfFjSX6e+iJbtXzjtt+WdjnFn4bqbtlTT\nzavwHo1wgWg+hfLvOTjK09BfUIVoVmr6h6NcQnNQQuITmoJjzkRnodyMjMZ6hAuM1mM9QJueb1VN\nkoXKfcStllbd6RfPnTfXCZwhcLE0LhA4TuEAEJC4TOELhYmjXyGk79fyqi/k8f3so3Bw0zfq+V0j\n8np/+UTgxbl9vNoqOU7OjkOMHZ0chObLs3erABS7QAAAAAAAAAAAAAAAAAAKHORZxg7O5yLOKl0H\nF3nsdA3m/p31OP703Ns0zeg+nfU4/vjcGCE2rbfpLpsmbIWyZsg2pmytsobK2ytBO2TNkLZM2BM2\nQ1OemMhhSunIjtEzZq2+TJsohNdJbl9Mupr4qUpINj3SybxClLSrjGUgSUusMO9Fbd9NF3YVVDtM\nhJStDjjzke22a/wk6ptDSlrvaG71YOVPc4RqtVChdO1tu6jdUpTyERF8zCLa/OmIxnmJuWb+s1+3\n4z+2US3vhOLX1853+9t5QhGbJuPKXdtLVfFLLqBPdjLtsrvajEsPWuLmF5TIy5LyGmU8ZZKnU73U\nocpwbPjtO8KFW2fwWPKmi1KlVCVWJUqBdvGGyOItxfksKOjOb3b+EMobdSuOtu+rl+aKKbuPnRrj\nz7ikM4NI4jGlRzfTr1lnT6PYonw7sNzBnHcKcZbjtLf87ILa2Xm6ySlc6UpPTwcxNsomJrYtkNsj\ntkDmnti2Wri7JZy6klPN8YoPV+4shW8lPGUq9mDXMWq7ziBx5SucTHQKTu5QhFiSlblj5xBtsCYi\nSyh1lV8Ss4LLes3C9pNYfi+QdWwaqG42Tsm41fQwnP2O4OFk+8lK0JVzl8w5HjbOUv5S9xC8i7rV\nuzqSuSpCExsIaWtHpRu6rBlnoZQg6a4UOFlRZ+EofVa/1HE9XL1w6NCpCtC+DEgcIXCYhcLk0LhA\nTuEAELhC4TOELhYmtXDTN+r5XSPyen/5Rubhpm/V8rpH5PT/APKJwYty+3m0U7OjkOMI5TtRObLs\n3eAApdoAAAAAAAAAAAAAAAAAAFDnIs4wdm/gv+WcZLoOLvPY33ec5K76nH98bg2afvOcm6D1OP74\n3NshNq2r6SdsrIGycg2pmyZshbJmxxEjZM2YyXVYzHlXWW/1mLf3ZxE+TTJf/loMFfV0KPzm9smu\nq1Aq6rq1Qqgz/IXG/wAs5/Vpk5UpCKkpd8YNqXu8X0InXWaRuhqq5ktbryUNq8lYbPm9y12nrfRm\nux+Y/DUpy22u9/oDkN1S+M7fCdDXwIspX1y6ispviOK9+tZ81HVVfh+21Y3yrLVf70yq9/F47SyF\nhlXzi74Y9+TakvK+8L1a7Ny1ae+3xDyvehEYetOLTaJmJ8mKta0829yGufpTOCmGgPce0XlTX8Da\nUrvn6LwWThOFWFj2nP2OhxN9eWhthCod8sN3q2295UZWl+HjU/8A9z/4DQID3E56G7HQ8cTW/gtW\n2fwWHic9y1UJrqfGbH7v69UKnNlSW04Ky98xbv8AejVbEtPOXMR/LWb0vwJ6cZZC+hGfG65OnuVX\nvgpnxafhNnnSp6PxreLpifZ5tQk9peLxxDqrq7N5s/ePMlquG6r5qM5+tk0ZJzZck2dgV5PgsqdW\n5+N6/l6iehXTQaS/TbvgWpUbiozFkC6a+ixZamN2+ZxBCnx811PXTdAvyVc1SOuV2zmzkmS1dsqT\nJ6jxk9y9SW/KQi0uz5VZKek1dl967102zVpak3Gyf4bFoxNZWq/rSrm9AgXW1cdhSkeTKv3kM/vv\nXUB604tJcwLS3jC0ySlD1pXNNngz2F3eKtFoqr15wnY953wZOXUn4a4rrCltqRz/AL02Om7v0vuM\nNKivXx7xXi1msz1pVcs+ULWJRMKu8V+NF/nrLNDu2ohPFSeY/Z73XXCFwwu5OjyYdxd+nLqLa+Yj\n5lozTh+hUql8GFQ4QOFbhC4WoKCFwmIXCxNar5DTN+r5XSPyen/5Rubhpm/V8rpH5PT/APKJwYty\n+3m0VHKdqOKnZic2XZu9IACl2gAAAAAAAAAAAAAAAAAAR/wX/LOMnZ3ORZxgug4u89jfd5zk3Qep\nx/fG5tmmbznJug9Tj++NwbITatq+kmbJ2y1bJ2yDaxe6HdCmHYQlN/eX429muP1KVJ8o7e0r6DHi\nDY67ueRMWhdpbDiG71fDX5cBcNxCF+MSvmLPif1H66Hv/ttdCxaohoT0Se8pSVg+C41ePFtUGmLe\ntPPqz3Ddizlw2OIpxKDToq8KU/ehP3PlGetsIJ312ELu5jZBhKEcVtJRhiiE/nervg1ltavCbG+t\nOBWlebKHF/DasotEEt63csqVxTfWrcatim+EWJiLMnWULVdYU2ni3stm4zSekXiHkpuWbRtry43w\nnBXkUU1dha7SS6cXaLW+pGE/jMtTSV6077DILQkoWz8HFsWvvBfvsi/KzScNr1fggx7cZ/w+Msfo\nLpFNLli10rpdLeQnpH1eh0vs/egsYKVTVeHikHA6udbsGUnyUq5quMWTEx1S7N6WtOeZNxyUffRV\nzG4bqebJe65kKahaLq7S1rt+cBMxzji09xrVfnN4tq6ypS0KT5sws+m899bV8+atrNqcRa4peS4a\nHUIS4nilE9finY0Qhe0NHGuWTLMbm0JuWlOyVq/AzeTJsbm2E3V2rbiTNWEpueAavcYdi6FBjOYj\nir/trQQPsqVd57Ln6zNWEkK2UnP4V4LGLYwpq7aYUttX3Dxk4m6qqtXbNjDrHQfQQuIa+wUW0JOl\nQ3GpR+CuyDcNye6rD1racjPRXEdOx4k2Bw5nSaw7DfReLi5SVucdhv506Y4ff7PreOro/wDLFOCF\nwgcJ3CBw7CtC4aXvz/KqR+Tx/fSjdF8hpe/P8qpH5PH99KJwZtx+3aMdnb5EHGEcp2onNzdm7wAF\nLvAAAAAAAAAAAAAAAAAAAoc5FnGDs7nIs4wXQcXeexvm8/yVz1OP7421s1Lef5K56nH98ba2Qm1b\nV9JO2XURlTt2y2m+KLJszm5SsQ4Lvx55uEl/xSF2L9/6ldSpCEL5tq2vKUXFqcWy2lHjV8c0zdC8\nuQ+hdm9so8Uyvzp0Be7Oj+FalOzH7fQwNm8lbe+FSENyUtsSW03viMXlm8ypB8nvOspamjihWWUL\n49jmRQ4tKecWs+fbWtSU2Erc4iCzcXaPzyxqzrxcxPRLNx5SrpGCWNlnOchstqlfeJe+b0y6Pji7\nJs0nD3/BWogQ7dy0pSy9bpqRAQXp99Tp8LPg0LJyGhPRMe4j4eKky0taU3DBsTPhWlXNQZtxqypU\nb4cHlRNYVmi8q+wUYYno+M/ATWH1c2NJc/svHzvU9dP/AMVoby5nFd5+0TXmUnnRZiP7LxRx+kh5\nv9BGet1wowb7Sxgyc0vW1o+cLluShPNsGKet1Pm0QoseiGropJ24C/sGQwlOcL8nOMNSvUmvwQWv\nBucombgIT0Se+pFtJnumYICEJTzUlZRbK7ZBMAB4mElJhplS2GHFXtK/GkZbMTMGlxXcxw37bwhx\nrQvQqN8b3PQUc2Mz+vx5JwVETzY0bqGQcIz9dpaShHh8HLvmtm4zSLtptDLf8tAcK3CE0U+HCH/T\nxQ4QOFbhQWChw0vfn+VUj8nj++lG4OGn78/yqkfk8f30onBn3H7do3SOzHGTs7fIgnNzNm71YAKX\neAAAAAAAAAAAAAAAAAABH/Bf8s4sdqc5FnFS6Di7z2N/3n+Suepx/fG2tmp7zlnw1lClstqXDj2L\na7xffHG7YErzsPtLP75CbTtvH9pao5TU929tMqKpVu93viG7YErzsPtLP74fpSXUWXlQ3E/bkw/3\nznbjofU0cTo06nBzm3aFs2afuGQrjMSo0VWYuSy+z78xMvcfUEXPFv0p/wD3jJ+f1/05q4z+CeXg\nxhG4tKeconXuYqqudgbf4JkP98rb3HzukmN2yH++X0P03W70OfBj3JKM62L8pXNSZdG5WYn5uH2y\nH++XLG5Kcrp0pj8c9k6tD9OUonOm1+8qVzldQnYZbQbZE3BqV5eowG/sMPMmagbjKYjjOOxpSvtz\n2f3zrUNss+MDLBz9uTau2W0rcVmNoMtA3N1GTzWMFTnv+IOmwI0Vi5ZZVTWP5b0MvLaPPw+0s/vm\n70qGTg0aBvdJVxpctbn2GEXg2CBuMpjFziw2X/tv+PMvhLGkw+0slbcljSYfaWSfpIIZOC33D7l4\n8pzdAiNcZpkpiRHlIW2nxV4lNXPBhMT/AGl0yq1qacWw8lDbyOghd/NOq0OZhcxdOqtNpbc+HHiy\nX0SWcN+K/JMGJNyCEpfmy5KaVBlScHwl9iSz8fqGkD0/CCdTjCxuFseBOagtcLY0mH2lkYWxpMPt\nLIw8P4Uc0i4zS+c0y5+NBYv0GCvnQ4bn9lkusMY0qD2lkYYxpUHtLJX6an/jLv8AbEv7j6av/Sst\n/g8QWTm4Onq5qHm/wPGx4YxpUHtLJThDGlwO0slM9t08/wC2nlk1F/e9i9F2Y3+stV73tzozHv1s\nm8YQxpcDtLJ8vzGkwO0slFTZdJ4LPUTaE5uAX0ZnckK9wcnoymeodAvzWkQO0ska1taTA7SyU/0/\nop9ifq5Of4kzPPxiHFCZ52MdDWtrSYHaWSG21pMDtTJD+mNI99S0XE+V0pLKP0F7Tdx7TS0LfWuU\npHM4niTbbaNIidpZKPF+fh9pZNVDYtJSnfCDz1HBA4socWT2U+fh9pZI1sp8/D7SyddRz4LZwhcL\nzBvvYfaWSFcP72H2lksWZOC1cIXC9XD+9h9pZKMAV52H2lk9MkFkvkNL35/llL/J6f8A5Rv2Afew\n+0smg78a0qm09KVsv2KXHaXYXfyUGHcan7LSTs7fIg4wdmJzZtm70gAKXaAAAAAAAAAAAAAAAAAA\nBQ5yLOKnaeictxek5iOuXQcXeexiAZfF6Tmo64xek5qOuWOJzYgGXxek5qOuMXpOajrg58WIBl8X\npOajrnzgGXme2DnxYkGW4Bl5ntjgGXme2DnxYkGW4Bl5ntjgGXme2DnxYkGW4Bl5ntjgGXme2Dnx\nYkGW4Bl5ntjgGXme2DnxYkrMnwDLzPbHAMvM9sHPixlsoMtwDLzPbHAMvM9sHPixJWZTF6Tmo658\nxelZntg58WJBluAZeZ7Y4Bl5ntg58WJBlsXpWZ7Z9xek5iOuDnxYgGWxelZntjgGXme2DnxYkGXx\nek5iOufMXpWZ7YOfFjCgy3AMvM9s+4vSc1HXBz4sQDL4vSc1HXGL0nNR1wc+LEAy3AMvM9scAy8z\n2wc+LElZk+AZeZ7Y4Bl5ntg58WMBk8XpWZ7Z9xek5qOuDmxBWZPgGXme2MXpWZ7YObGI5TtRyxG5\n6T4eajrnTyubt7N3pAAUu0AAAAAAAAAAAAAAAAAAAa+bAa+XQcXeewABY4YAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADZsBr5sBXN3Nm7wAFLtAAAAAAAAAAAAAAAAAAAGvmwG\nCfZUi7ZUXQcjdYeyCgAFjgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGwG\nFiM3Vr4pmiubv7VD5gAKXXAAAAAAAAAAAAAAAAAAAI3EJVziQBDitcDRmjA0ZpdAIYKPgtcDRmjA\n0ZpdAmeko+C1wNGaMDRml0Aeko+C1wNGaMDRml0CJ6Sj4LXA0ZowNGaXQJHpKPgtcDRmjA0ZpdAH\npKPgtcDRmjA0ZpdAieko+C1wNBpm7OY7FlWGV3tN7vpvpzjfCXanf7eOSg5240IQo+xjOHpeeOHp\nef7BjwXuAyHDcvzg4bl+cMeAMhw9Lzxw9LzzHgDIcPS8/wBgcPS88x4A23cRMdlSloeu3xN7vpue\nBozTQt7r5av1c6OUTd/bqEJ0fetcDRmjA0ZpdAi6PpKPgtcARmjA0ZpdAHpKPgtcDQMDR9sugD0l\nHwWuAIzRgCC6APSUfBa4AgYAgugec1fpaPgtcAQMDR9sugOZ6Wj4LXA0fbGBozS6BNZ6Sj4I20JT\nc4qSQAgnysAAEwAAAAAAAAHmjL/WNHo+ql7SMv8AWNHo+ql7SQyQW4JvS4PNGX+saPR9VL2kZf6x\no9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkg\nYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+\nsaPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZ\nf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1Uva\nRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS5y/dm9bqEn7HijnGX+saPR9VL2k12VvnznXF\nuKZhWlLvvwIe52uJwrwYtboK1aFkHTwcsylTPMwuo9+8MpUzzMLqPfvEvUQcjoeo/ng6mDlmUqZ5\nmF1Hv3hlKmeZhdR794eogdD1H88HUwcsylTPMwuo9+8MpUzzMLqPfvD1EDoeo/ng6mDlmUqZ5mF1\nHv3hlKmeZhdR794eogdD1H88HcNxD1ioMfb8UdNPI0XfPnNOIcSzCuKSu+/Ch7na42LL/WNHo+ql\n7SQnXg6+i0FajCyb0uDzRl/rGj0fVS9pGX+saPR9VL2kjkg24JvS4PNGX+saPR9VL2kZf6xo9H1U\nvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4\nPNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9\nVL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9\nH1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJ\nvS4PNGX+saPR9VL2kZf6xo9H1UvaRkgYJuPgAyNoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA//Z\n",
       "text/html": [
        "\n",
        "        <iframe\n",
@@ -1130,10 +1119,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f44bc704e10>"
+       "<IPython.lib.display.YouTubeVideo at 0x7f31fc5ee490>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1523,10 +1512,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f6ca5438c18>"
+       "<IPython.lib.display.IFrame at 0x7faea8163f90>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4515,23 +4504,30 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
+  },
+  "toc": {
+   "toc_cell": false,
+   "toc_number_sections": true,
+   "toc_threshold": 4,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
